--- a/exams.html
+++ b/exams.html
@@ -1,70 +1,247 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Exam Schedules - St Paul Learning Centre</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Exam Schedules - St Paul Learning Centre</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
 
-    <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-    <script>
-        // Firebase Config
-        const firebaseConfig = {
-            apiKey: "AIzaSyBvLXOx9N88hBBLMHVCcEM3zBK-AYfQI_o",
-            authDomain: "my-school-st-paul-1455a.firebaseapp.com",
-            projectId: "my-school-st-paul-1455a",
-            storageBucket: "my-school-st-paul-1455a.appspot.com",
-            messagingSenderId: "122530310728",
-            appId: "1:122530310728:web:exampleid"
-        };
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+  <script>
+    // Firebase Config
+    const firebaseConfig = {
+      apiKey: "AIzaSyBvLXOx9N88hBBLMHVCcEM3zBK-AYfQI_o",
+      authDomain: "my-school-st-paul-1455a.firebaseapp.com",
+      projectId: "my-school-st-paul-1455a",
+      storageBucket: "my-school-st-paul-1455a.appspot.com",
+      messagingSenderId: "122530310728",
+      appId: "1:122530310728:web:exampleid"
+    };
 
-        // Initialize Firebase
-        const app = firebase.initializeApp(firebaseConfig);
-        const auth = firebase.auth();
+    // Initialize Firebase
+    const app = firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
 
-        // Protect this page
-        auth.onAuthStateChanged(user => {
-            if (!user || user.email !== "nicholasbagenda@gmail.com") {
-                // Redirect unauthorized users to login
-                window.location.href = "login.html";
-            }
-        });
-    </script>
+    // Protect this page
+    auth.onAuthStateChanged(user => {
+      if (!user || user.email !== "nicholasbagenda@gmail.com") {
+        window.location.href = "login.html";
+      }
+    });
+  </script>
+
+  <style>
+    /* Navbar */
+    .navbar {
+      background: #003366;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 10px 15px;
+      position: sticky;
+      top: 0;
+      z-index: 1001;
+    }
+
+    .menu-btn {
+      font-size: 24px;
+      cursor: pointer;
+      color: white;
+    }
+
+    .navbar-center {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      flex: 1;
+    }
+
+    .school-logo {
+      width: 70px;
+      height: 70px;
+      border-radius: 50%;
+      cursor: pointer;
+    }
+
+    .logo-text {
+      font-size: 18px;
+      font-weight: bold;
+      margin-top: 5px;
+    }
+
+    /* Sidebar Menu */
+    .side-menu {
+      height: 100%;
+      width: 0;
+      position: fixed;
+      top: 0;
+      left: 0;
+      background-color: #00264d;
+      overflow-x: hidden;
+      transition: 0.4s;
+      padding-top: 60px;
+      z-index: 1002;
+    }
+
+    .side-menu a {
+      padding: 12px 25px;
+      text-decoration: none;
+      font-size: 18px;
+      color: white;
+      display: block;
+      transition: 0.3s;
+    }
+
+    .side-menu a:hover {
+      background-color: #004080;
+    }
+
+    .close-btn {
+      position: absolute;
+      top: 15px;
+      right: 25px;
+      font-size: 30px;
+      color: white;
+      cursor: pointer;
+    }
+
+    /* Overlay for dimming background */
+    #overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.3s ease;
+      z-index: 1000;
+    }
+
+    #overlay.active {
+      opacity: 1;
+      pointer-events: auto;
+    }
+
+    header {
+      text-align: center;
+      padding: 40px 15px 20px;
+      background: #f0f0f5;
+    }
+
+    .motto {
+      font-style: italic;
+      color: #003366;
+      margin-bottom: 10px;
+    }
+
+    section {
+      text-align: center;
+      padding: 20px;
+    }
+
+    .feature-list {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    .feature-list li {
+      margin: 10px 0;
+    }
+
+    .feature-list a {
+      text-decoration: none;
+      color: #003366;
+      font-weight: bold;
+      background: #e0e0f5;
+      padding: 10px 20px;
+      border-radius: 5px;
+      display: inline-block;
+      transition: 0.3s;
+    }
+
+    .feature-list a:hover {
+      background: #003366;
+      color: white;
+    }
+
+    footer {
+      text-align: center;
+      padding: 15px;
+      background: #003366;
+      color: white;
+      margin-top: 30px;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>St Paul Learning Centre</h1>
-        <div class="motto">Strive For Success</div>
-        <p>Empowering students, connecting families, supporting teachers.</p>
-    </header>
 
-    nav id="sideMenu" class="side-menu">
-      <a href="javascript:void(0)" class="close-btn" onclick="closeMenu()">&times;</a>
-      <a href="index.html">News & Announcements</a>
-      <a href="student-portal.html">Student Portal</a>
-      <a href="admissions.html">Admissions</a>
-      <a href="resources.html">Resources</a>
-      <a href="showcase.html">Showcase</a>
-      <a href="contact.html">Contact</a>
-      <a href="timetable.html">Timetable</a>
-      <a href="teacher-resources.html">Teacher Resources</a>
-      <a href="parent-portal.html">Parent Portal</a>
+  <!-- Overlay -->
+  <div id="overlay" onclick="closeMenu()"></div>
+
+  <!-- Top Bar -->
+  <div class="navbar">
+    <span class="menu-btn" onclick="openMenu()">&#9776;</span>
+    <div class="navbar-center">
+      <a href="https://nicholasbagenda.netlify.app" target="_blank">
+        <img src="https://i.postimg.cc/t4yDG3Fq/Mon-21-07-2025-16-26-06.png" alt="School Logo" class="school-logo">
+      </a>
+      <span class="logo-text">St Paul Learning Centre</span>
+    </div>
+  </div>
+
+  <!-- Sidebar Menu -->
+  <nav id="sideMenu" class="side-menu">
+    <a href="javascript:void(0)" class="close-btn" onclick="closeMenu()">&times;</a>
+    <a href="index.html">News & Announcements</a>
+    <a href="student-portal.html">Student Portal</a>
+    <a href="admissions.html">Admissions</a>
+    <a href="resources.html">Resources</a>
+    <a href="showcase.html">Showcase</a>
+    <a href="contact.html">Contact</a>
+    <a href="timetable.html">Timetable</a>
+    <a href="teacher-resources.html">Teacher Resources</a>
+    <a href="parent-portal.html">Parent Portal</a>
   </nav>
-    <section>
-        <h2>Exam Schedules</h2>
-        <p>Check out upcoming exam dates and download schedules for all grades.</p>
-        <ul class="feature-list">
-            <li><a href="#">Grade 8 Exam Schedule</a></li>
-            <li><a href="#">Grade 9 Exam Schedule</a></li>
-            <li><a href="#">Grade 10 Exam Schedule</a></li>
-            <!-- Add more links as needed -->
-        </ul>
-    </section>
 
-    <footer>
-        &copy; 2025 St Paul Learning Centre. All rights reserved.
-    </footer>
+  <header>
+    <h1>St Paul Learning Centre</h1>
+    <div class="motto">Strive For Success</div>
+    <p>Empowering students, connecting families, supporting teachers.</p>
+  </header>
+
+  <section>
+    <h2>Exam Schedules</h2>
+    <p>Check out upcoming exam dates and download schedules for all grades.</p>
+    <ul class="feature-list">
+      <li><a href="#">Grade 8 Exam Schedule</a></li>
+      <li><a href="#">Grade 9 Exam Schedule</a></li>
+      <li><a href="#">Grade 10 Exam Schedule</a></li>
+    </ul>
+  </section>
+
+  <footer>
+    &copy; 2025 St Paul Learning Centre. All rights reserved.
+  </footer>
+
+  <script>
+    const sideMenu = document.getElementById("sideMenu");
+    const overlay = document.getElementById("overlay");
+
+    function openMenu() {
+      sideMenu.style.width = "280px";
+      overlay.classList.add("active");
+    }
+
+    function closeMenu() {
+      sideMenu.style.width = "0";
+      overlay.classList.remove("active");
+    }
+  </script>
 </body>
 </html>
